[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dankcli_lib"
version = "0.6.9"
description = "Patched CLI Meme Generator/Caption Maker to automatically add whitespace and text to top and bottom"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "TheMrRedSlime"}
]
keywords = ["dankcli", "dank", "meme", "memegenerator", "memes", "generator", "pillow", "dankmemes", "dankcli-lib", "caption", "maker", "make", "discord", "discord.py"]
requires-python = ">=3.7"
dependencies = [
    "pillow",
    "requests"
]

[project.urls]
Homepage = "https://github.com/TheMrRedSlime/dankcli"

[project.scripts]
dankcli = "dankcli_lib.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dankcli_lib*"]

[tool.setuptools.package-data]
dankcli_lib = ["fonts/*.ttf"]